Fix spacing between clock and workspaces when the window title is too long

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -16,8 +16,7 @@ window#waybar {
 /* general theme - can modify individual modules if chosen to do so below */
 #workspaces, #custom-power, #clock, #custom-weather, #window, #custom-uptime, #battery, #pulseaudio, #backlight, #network, #memory, #cpu, #temperature, #tray {
 	background: rgba(40, 40, 40, 0.75);
-        padding: 3px 17px 3px 17px;
-	/*padding: 3px 8px 3px 8px;*/
+        padding: 3px 8px 3px 8px;
 	margin: 4px 0px 4px 0px;
 	border: solid 0px #f4d9e1;
 }
@@ -26,6 +25,7 @@ window#waybar {
 #workspaces {
 	padding: 5px 5px;
 	margin-left: 8px;
+	margin-right: 8px;
 	border-radius: 8px;
 }
 
@@ -57,6 +57,7 @@ window#waybar {
 }
 
 #clock {
+	margin-left: 8px;
 	border-radius: 8px 8px 8px 8px;
 }
 
